[package]
    authors = ["https://github.com/ahmedali8"]
    edition = "2021"
    name = "erc20"
    version = "0.1.0"

[dependencies]
    ink = { version = "4.0.0-beta", default-features = false }

    scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
        "derive",
    ] }
    scale-info = { version = "2.3", default-features = false, features = [
        "derive",
    ], optional = true }

[lib]
    crate-type = [
        # Used for normal contract Wasm blobs.
        "cdylib",
    ]
    name = "erc20"
    path = "lib.rs"

[features]
    default = ["std"]
    ink-as-dependency = []
    std = ["ink/std", "scale/std", "scale-info/std"]
